objects/Status_History__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <description>Status has been changed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HCP_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HCP Enrollment</label>
        <referenceTo>HCP_Enrollment__c</referenceTo>
        <relationshipLabel>Status History</relationshipLabel>
        <relationshipName>StatusHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewStatus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudySite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Site</label>
        <referenceTo>Study_Site__c</referenceTo>
        <relationshipLabel>Status History</relationshipLabel>
        <relationshipName>Status_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Status History</label>
    <nameField>
        <displayFormat>SH-{0000000}</displayFormat>
        <label>Status History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>